PR/50527: David Binderman: Fix impossible code. Odd offsets need special treatment.